# spam_check

./: main.py  pyproject.toml
.github/workflows/: dev_tools.yml  test_workflow.yml
config/: config.yaml
notebooks/: explore.ipynb
scripts/: config.py  load_data.py
scripts/classifiers/: base_classifier.py  decision_tree.py  lgrs.py  logistic_regression.py  naive_bayes.py  svm.py
scripts/config/: config.py  config.yaml
scripts/data/: Ingestion.py  download.py  download_nltk.py  preprocess.py  validation.py
scripts/tests/: conftest.py  test_classifiers.py  test_ingestion.py  test_preprocess.py
scripts/train/: evaluate.py  predict.py  train.py  tuning.py  utils.py
