[project]
name = "spam-check"
version = "0.1.0"
description = "Dependencies necessary to run spam check"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=2.0.0",
    "ruff>=0.15.12",
    "isort>=8.0.1",
    "black>=26.3.1",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["spam_check"]
lines_between_types = 1
lines_between_sections = 1
combine_as_imports = true
force_single_line = false
order_by_type = true
skip = [".venv", "venv", "node_modules", "migrations", ".vscode", ".github"]
skip_gitignore = true
balanced_wrapping = true
atomic = true

[tool.ruff]
target-version = "py310"
line-length = 80
indent-width = 4
extend-exclude = ["docs", "test", "tests"]

[tool.ruff.lint]
select = ["F", "E"]
extend-select = [
    "C90","I","N","UP","YTT","ASYNC","TRIO","S","BLE","B","A","COM",
    "C4","DTZ","T10","DJ","EM","EXE","FA","ISC","ICN","G","INP","PIE","PYI","PT","Q",
    "RSE","RET","SLOT","SIM","TID","TCH","INT","ARG","PTH","PD","PL","TRY","FLY","NPY",
    "AIR","PERF","FURB","LOG","RUF",
]
ignore = [
    "ANN101","ANN102","I001","NPY002","INP001","TRY003",
    "ISC001","COM812","EM101","ANN401","S311","PLW1641","N999",
]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"test_*.py" = ["S101"]

[tool.ruff.lint.pylint]
max-locals = 18

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = false
docstring-code-format = true

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | \.git
  | data
  | scripts/models
)/
'''

